--- a/server/package.json
+++ b/server/package.json
@@ -11,16 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.12.0",
-    "apollo-server-errors": "^3.3.1",
-    "apollo-server-express": "^3.12.0",
+    "@apollo/server": "^4.7.5",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
+    "graphql": "^16.7.1",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1"
   },
