--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "develop": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "dev-server": "cd server && npm run dev"
   },
   "keywords": [],
   "author": "",
