--- a/server/package.json
+++ b/server/package.json
@@ -19,12 +19,15 @@
     "csv": "^6.3.1",
     "csvtojson": "^2.0.10",
     "express": "^4.18.2",
+    "googleapis": "^128.0.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^16.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
