--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@formspark/use-formspark": "^0.1.39",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.4.0",
     "graphql": "^16.7.1",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
